<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/navigation_Inicio"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_usuario"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_dashboard" />

   <!--item
        android:id="@+id/navigation_personal"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_person" /-->
    <item
        android:id="@+id/navigation_acerca"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/title_acerca_de" />
    </group>
</menu>
